--- a/frontend-MELI/package.json
+++ b/frontend-MELI/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.6",
+    "sharp": "^0.33.4",
     "swr": "^2.2.5"
   },
   "devDependencies": {
