--- a/frontend-MELI/package.json
+++ b/frontend-MELI/package.json
@@ -32,5 +32,8 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "ts-jest": "^29.1.5"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
